Run `make generate`.
Signed-off-by: Cem Mergenci <cmergenci@gmail.com>

--- a/package/crds/alloydb.gcp.upbound.io_clusters.yaml
+++ b/package/crds/alloydb.gcp.upbound.io_clusters.yaml
@@ -304,45 +304,49 @@ spec:
                     description: |-
                       MaintenanceUpdatePolicy defines the policy for system updates.
                       Structure is documented below.
-                    properties:
-                      maintenanceWindows:
-                        description: |-
-                          Preferred windows to perform maintenance. Currently limited to 1.
-                          Structure is documented below.
-                        items:
-                          properties:
-                            day:
-                              description: |-
-                                Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
-                                Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
-                              type: string
-                            startTime:
-                              description: |-
-                                Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
-                                Structure is documented below.
-                              properties:
-                                hours:
-                                  description: Hours of day in 24 hour format. Should
-                                    be from 0 to 23. An API may choose to allow the
-                                    value "24:00:00" for scenarios like business closing
-                                    time.
-                                  type: number
-                                minutes:
-                                  description: Minutes of hour of day. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                                nanos:
-                                  description: Fractions of seconds in nanoseconds.
-                                    Currently, only the value 0 is supported.
-                                  type: number
-                                seconds:
-                                  description: Seconds of minutes of the time. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                              type: object
-                          type: object
-                        type: array
-                    type: object
+                    items:
+                      properties:
+                        maintenanceWindows:
+                          description: |-
+                            Preferred windows to perform maintenance. Currently limited to 1.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              day:
+                                description: |-
+                                  Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
+                                  Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
+                                type: string
+                              startTime:
+                                description: |-
+                                  Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
+                                  Structure is documented below.
+                                items:
+                                  properties:
+                                    hours:
+                                      description: Hours of day in 24 hour format.
+                                        Should be from 0 to 23. An API may choose
+                                        to allow the value "24:00:00" for scenarios
+                                        like business closing time.
+                                      type: number
+                                    minutes:
+                                      description: Minutes of hour of day. Currently,
+                                        only the value 0 is supported.
+                                      type: number
+                                    nanos:
+                                      description: Fractions of seconds in nanoseconds.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                    seconds:
+                                      description: Seconds of minutes of the time.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                  type: object
+                                type: array
+                            type: object
+                          type: array
+                      type: object
+                    type: array
                   network:
                     description: |-
                       The relative resource name of the VPC network on which the instance can be accessed. It is specified in the following form:
@@ -525,12 +529,14 @@ spec:
                     description: |-
                       Configuration for Private Service Connect (PSC) for the cluster.
                       Structure is documented below.
-                    properties:
-                      pscEnabled:
-                        description: Create an instance that allows connections from
-                          Private Service Connect endpoints to the instance.
-                        type: boolean
-                    type: object
+                    items:
+                      properties:
+                        pscEnabled:
+                          description: Create an instance that allows connections
+                            from Private Service Connect endpoints to the instance.
+                          type: boolean
+                      type: object
+                    type: array
                   restoreBackupSource:
                     description: |-
                       The source when restoring from a backup. Conflicts with 'restore_continuous_backup_source', both can't be set together.
@@ -1018,45 +1024,49 @@ spec:
                     description: |-
                       MaintenanceUpdatePolicy defines the policy for system updates.
                       Structure is documented below.
-                    properties:
-                      maintenanceWindows:
-                        description: |-
-                          Preferred windows to perform maintenance. Currently limited to 1.
-                          Structure is documented below.
-                        items:
-                          properties:
-                            day:
-                              description: |-
-                                Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
-                                Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
-                              type: string
-                            startTime:
-                              description: |-
-                                Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
-                                Structure is documented below.
-                              properties:
-                                hours:
-                                  description: Hours of day in 24 hour format. Should
-                                    be from 0 to 23. An API may choose to allow the
-                                    value "24:00:00" for scenarios like business closing
-                                    time.
-                                  type: number
-                                minutes:
-                                  description: Minutes of hour of day. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                                nanos:
-                                  description: Fractions of seconds in nanoseconds.
-                                    Currently, only the value 0 is supported.
-                                  type: number
-                                seconds:
-                                  description: Seconds of minutes of the time. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                              type: object
-                          type: object
-                        type: array
-                    type: object
+                    items:
+                      properties:
+                        maintenanceWindows:
+                          description: |-
+                            Preferred windows to perform maintenance. Currently limited to 1.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              day:
+                                description: |-
+                                  Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
+                                  Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
+                                type: string
+                              startTime:
+                                description: |-
+                                  Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
+                                  Structure is documented below.
+                                items:
+                                  properties:
+                                    hours:
+                                      description: Hours of day in 24 hour format.
+                                        Should be from 0 to 23. An API may choose
+                                        to allow the value "24:00:00" for scenarios
+                                        like business closing time.
+                                      type: number
+                                    minutes:
+                                      description: Minutes of hour of day. Currently,
+                                        only the value 0 is supported.
+                                      type: number
+                                    nanos:
+                                      description: Fractions of seconds in nanoseconds.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                    seconds:
+                                      description: Seconds of minutes of the time.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                  type: object
+                                type: array
+                            type: object
+                          type: array
+                      type: object
+                    type: array
                   network:
                     description: |-
                       The relative resource name of the VPC network on which the instance can be accessed. It is specified in the following form:
@@ -1239,12 +1249,14 @@ spec:
                     description: |-
                       Configuration for Private Service Connect (PSC) for the cluster.
                       Structure is documented below.
-                    properties:
-                      pscEnabled:
-                        description: Create an instance that allows connections from
-                          Private Service Connect endpoints to the instance.
-                        type: boolean
-                    type: object
+                    items:
+                      properties:
+                        pscEnabled:
+                          description: Create an instance that allows connections
+                            from Private Service Connect endpoints to the instance.
+                          type: boolean
+                      type: object
+                    type: array
                   restoreBackupSource:
                     description: |-
                       The source when restoring from a backup. Conflicts with 'restore_continuous_backup_source', both can't be set together.
@@ -1988,45 +2000,49 @@ spec:
                     description: |-
                       MaintenanceUpdatePolicy defines the policy for system updates.
                       Structure is documented below.
-                    properties:
-                      maintenanceWindows:
-                        description: |-
-                          Preferred windows to perform maintenance. Currently limited to 1.
-                          Structure is documented below.
-                        items:
-                          properties:
-                            day:
-                              description: |-
-                                Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
-                                Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
-                              type: string
-                            startTime:
-                              description: |-
-                                Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
-                                Structure is documented below.
-                              properties:
-                                hours:
-                                  description: Hours of day in 24 hour format. Should
-                                    be from 0 to 23. An API may choose to allow the
-                                    value "24:00:00" for scenarios like business closing
-                                    time.
-                                  type: number
-                                minutes:
-                                  description: Minutes of hour of day. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                                nanos:
-                                  description: Fractions of seconds in nanoseconds.
-                                    Currently, only the value 0 is supported.
-                                  type: number
-                                seconds:
-                                  description: Seconds of minutes of the time. Currently,
-                                    only the value 0 is supported.
-                                  type: number
-                              type: object
-                          type: object
-                        type: array
-                    type: object
+                    items:
+                      properties:
+                        maintenanceWindows:
+                          description: |-
+                            Preferred windows to perform maintenance. Currently limited to 1.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              day:
+                                description: |-
+                                  Preferred day of the week for maintenance, e.g. MONDAY, TUESDAY, etc.
+                                  Possible values are: MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY.
+                                type: string
+                              startTime:
+                                description: |-
+                                  Preferred time to start the maintenance operation on the specified day. Maintenance will start within 1 hour of this time.
+                                  Structure is documented below.
+                                items:
+                                  properties:
+                                    hours:
+                                      description: Hours of day in 24 hour format.
+                                        Should be from 0 to 23. An API may choose
+                                        to allow the value "24:00:00" for scenarios
+                                        like business closing time.
+                                      type: number
+                                    minutes:
+                                      description: Minutes of hour of day. Currently,
+                                        only the value 0 is supported.
+                                      type: number
+                                    nanos:
+                                      description: Fractions of seconds in nanoseconds.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                    seconds:
+                                      description: Seconds of minutes of the time.
+                                        Currently, only the value 0 is supported.
+                                      type: number
+                                  type: object
+                                type: array
+                            type: object
+                          type: array
+                      type: object
+                    type: array
                   migrationSource:
                     description: |-
                       Cluster created via DMS migration.
@@ -2081,12 +2097,14 @@ spec:
                     description: |-
                       Configuration for Private Service Connect (PSC) for the cluster.
                       Structure is documented below.
-                    properties:
-                      pscEnabled:
-                        description: Create an instance that allows connections from
-                          Private Service Connect endpoints to the instance.
-                        type: boolean
-                    type: object
+                    items:
+                      properties:
+                        pscEnabled:
+                          description: Create an instance that allows connections
+                            from Private Service Connect endpoints to the instance.
+                          type: boolean
+                      type: object
+                    type: array
                   reconciling:
                     description: |-
                       Output only. Reconciling (https://google.aip.dev/128#reconciliation).
