--- a/package/crds/compute.gcp.upbound.io_instances.yaml
+++ b/package/crds/compute.gcp.upbound.io_instances.yaml
@@ -882,21 +882,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -942,13 +944,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
@@ -1924,21 +1928,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -1984,13 +1990,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
@@ -2931,21 +2939,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -2991,13 +3001,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
