--- a/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
@@ -793,21 +793,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           type: number
                         nodeAffinities:
@@ -850,13 +852,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Allows instance to be preempted. This defaults to
@@ -1733,21 +1737,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           type: number
                         nodeAffinities:
@@ -1790,13 +1796,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Allows instance to be preempted. This defaults to
@@ -2642,21 +2650,23 @@ spec:
                             run and be terminated after then, the termination action
                             could be defined in instance_termination_action. Structure
                             is documented below.
-                          properties:
-                            nanos:
-                              description: |-
-                                Span of time that's a fraction of a second at nanosecond
-                                resolution. Durations less than one second are represented with a 0
-                                seconds field and a positive nanos field. Must be from 0 to
-                                999,999,999 inclusive.
-                              type: number
-                            seconds:
-                              description: |-
-                                Span of time at a resolution of a second. Must be from 0 to
-                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
-                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
-                              type: number
-                          type: object
+                          items:
+                            properties:
+                              nanos:
+                                description: |-
+                                  Span of time that's a fraction of a second at nanosecond
+                                  resolution. Durations less than one second are represented with a 0
+                                  seconds field and a positive nanos field. Must be from 0 to
+                                  999,999,999 inclusive.
+                                type: number
+                              seconds:
+                                description: |-
+                                  Span of time at a resolution of a second. Must be from 0 to
+                                  315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                  sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                                type: number
+                            type: object
+                          type: array
                         minNodeCpus:
                           type: number
                         nodeAffinities:
@@ -2699,13 +2709,15 @@ spec:
                             instance is terminated using max_run_duration and STOP
                             instance_termination_action. Only support true discard_local_ssd
                             at this point. Structure is documented below.
-                          properties:
-                            discardLocalSsd:
-                              description: Whether to discard local SSDs attached
-                                to the VM while terminating using max_run_duration.
-                                Only supports true at this point.
-                              type: boolean
-                          type: object
+                          items:
+                            properties:
+                              discardLocalSsd:
+                                description: Whether to discard local SSDs attached
+                                  to the VM while terminating using max_run_duration.
+                                  Only supports true at this point.
+                                type: boolean
+                            type: object
+                          type: array
                         preemptible:
                           description: |-
                             Allows instance to be preempted. This defaults to
