--- a/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
+++ b/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
@@ -240,32 +240,38 @@ spec:
                                 description: |-
                                   The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
                                   Structure is documented below.
-                                properties:
-                                  recaptchaOptions:
-                                    description: |-
-                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
-                                      Structure is documented below.
-                                    properties:
-                                      actionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA action-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                      sessionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA session-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                    type: object
-                                type: object
+                                items:
+                                  properties:
+                                    recaptchaOptions:
+                                      description: |-
+                                        reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                        Structure is documented below.
+                                      items:
+                                        properties:
+                                          actionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              action-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                          sessionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              session-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                        type: object
+                                      type: array
+                                  type: object
+                                type: array
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
@@ -563,32 +569,38 @@ spec:
                                 description: |-
                                   The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
                                   Structure is documented below.
-                                properties:
-                                  recaptchaOptions:
-                                    description: |-
-                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
-                                      Structure is documented below.
-                                    properties:
-                                      actionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA action-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                      sessionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA session-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                    type: object
-                                type: object
+                                items:
+                                  properties:
+                                    recaptchaOptions:
+                                      description: |-
+                                        reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                        Structure is documented below.
+                                      items:
+                                        properties:
+                                          actionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              action-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                          sessionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              session-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                        type: object
+                                      type: array
+                                  type: object
+                                type: array
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
@@ -1051,32 +1063,38 @@ spec:
                                 description: |-
                                   The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
                                   Structure is documented below.
-                                properties:
-                                  recaptchaOptions:
-                                    description: |-
-                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
-                                      Structure is documented below.
-                                    properties:
-                                      actionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA action-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                      sessionTokenSiteKeys:
-                                        description: A list of site keys to be used
-                                          during the validation of reCAPTCHA session-tokens.
-                                          The provided site keys need to be created
-                                          from reCAPTCHA API under the same project
-                                          where the security policy is created.
-                                        items:
-                                          type: string
-                                        type: array
-                                    type: object
-                                type: object
+                                items:
+                                  properties:
+                                    recaptchaOptions:
+                                      description: |-
+                                        reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                        Structure is documented below.
+                                      items:
+                                        properties:
+                                          actionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              action-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                          sessionTokenSiteKeys:
+                                            description: A list of site keys to be
+                                              used during the validation of reCAPTCHA
+                                              session-tokens. The provided site keys
+                                              need to be created from reCAPTCHA API
+                                              under the same project where the security
+                                              policy is created.
+                                            items:
+                                              type: string
+                                            type: array
+                                        type: object
+                                      type: array
+                                  type: object
+                                type: array
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
