--- a/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
+++ b/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
@@ -156,17 +156,19 @@ spec:
                     description: |-
                       ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
                       Structure is documented below.
-                    properties:
-                      ekmConnectionKeyPath:
-                        description: The path to the external key material on the
-                          EKM when using EkmConnection e.g., "v0/my/key". Set this
-                          field instead of externalKeyUri when using an EkmConnection.
-                        type: string
-                      externalKeyUri:
-                        description: The URI for an external resource that this CryptoKeyVersion
-                          represents.
-                        type: string
-                    type: object
+                    items:
+                      properties:
+                        ekmConnectionKeyPath:
+                          description: The path to the external key material on the
+                            EKM when using EkmConnection e.g., "v0/my/key". Set this
+                            field instead of externalKeyUri when using an EkmConnection.
+                          type: string
+                        externalKeyUri:
+                          description: The URI for an external resource that this
+                            CryptoKeyVersion represents.
+                          type: string
+                      type: object
+                    type: array
                   state:
                     description: |-
                       The current state of the CryptoKeyVersion.
@@ -269,17 +271,19 @@ spec:
                     description: |-
                       ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
                       Structure is documented below.
-                    properties:
-                      ekmConnectionKeyPath:
-                        description: The path to the external key material on the
-                          EKM when using EkmConnection e.g., "v0/my/key". Set this
-                          field instead of externalKeyUri when using an EkmConnection.
-                        type: string
-                      externalKeyUri:
-                        description: The URI for an external resource that this CryptoKeyVersion
-                          represents.
-                        type: string
-                    type: object
+                    items:
+                      properties:
+                        ekmConnectionKeyPath:
+                          description: The path to the external key material on the
+                            EKM when using EkmConnection e.g., "v0/my/key". Set this
+                            field instead of externalKeyUri when using an EkmConnection.
+                          type: string
+                        externalKeyUri:
+                          description: The URI for an external resource that this
+                            CryptoKeyVersion represents.
+                          type: string
+                      type: object
+                    type: array
                   state:
                     description: |-
                       The current state of the CryptoKeyVersion.
@@ -528,17 +532,19 @@ spec:
                     description: |-
                       ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
                       Structure is documented below.
-                    properties:
-                      ekmConnectionKeyPath:
-                        description: The path to the external key material on the
-                          EKM when using EkmConnection e.g., "v0/my/key". Set this
-                          field instead of externalKeyUri when using an EkmConnection.
-                        type: string
-                      externalKeyUri:
-                        description: The URI for an external resource that this CryptoKeyVersion
-                          represents.
-                        type: string
-                    type: object
+                    items:
+                      properties:
+                        ekmConnectionKeyPath:
+                          description: The path to the external key material on the
+                            EKM when using EkmConnection e.g., "v0/my/key". Set this
+                            field instead of externalKeyUri when using an EkmConnection.
+                          type: string
+                        externalKeyUri:
+                          description: The URI for an external resource that this
+                            CryptoKeyVersion represents.
+                          type: string
+                      type: object
+                    type: array
                   generateTime:
                     description: The time this CryptoKeyVersion key material was generated
                     type: string
