--- a/package/crds/monitoring.gcp.upbound.io_uptimecheckconfigs.yaml
+++ b/package/crds/monitoring.gcp.upbound.io_uptimecheckconfigs.yaml
@@ -256,13 +256,15 @@ spec:
                           description: |-
                             The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
                             Structure is documented below.
-                          properties:
-                            type:
-                              description: |-
-                                The type of authentication to use.
-                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              type:
+                                description: |-
+                                  The type of authentication to use.
+                                  Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                                type: string
+                            type: object
+                          type: array
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
@@ -729,13 +731,15 @@ spec:
                           description: |-
                             The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
                             Structure is documented below.
-                          properties:
-                            type:
-                              description: |-
-                                The type of authentication to use.
-                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              type:
+                                description: |-
+                                  The type of authentication to use.
+                                  Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                                type: string
+                            type: object
+                          type: array
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
@@ -1370,13 +1374,15 @@ spec:
                           description: |-
                             The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
                             Structure is documented below.
-                          properties:
-                            type:
-                              description: |-
-                                The type of authentication to use.
-                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              type:
+                                description: |-
+                                  The type of authentication to use.
+                                  Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                                type: string
+                            type: object
+                          type: array
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
