--- a/package/crds/privateca.gcp.upbound.io_certificates.yaml
+++ b/package/crds/privateca.gcp.upbound.io_certificates.yaml
@@ -362,11 +362,13 @@ spec:
                           description: |-
                             When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
                             Structure is documented below.
-                          properties:
-                            keyId:
-                              description: The value of the KeyId in lowercase hexidecimal.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              keyId:
+                                description: The value of the KeyId in lowercase hexidecimal.
+                                type: string
+                            type: object
+                          type: array
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
@@ -1068,11 +1070,13 @@ spec:
                           description: |-
                             When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
                             Structure is documented below.
-                          properties:
-                            keyId:
-                              description: The value of the KeyId in lowercase hexidecimal.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              keyId:
+                                description: The value of the KeyId in lowercase hexidecimal.
+                                type: string
+                            type: object
+                          type: array
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
@@ -2173,11 +2177,13 @@ spec:
                           description: |-
                             When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
                             Structure is documented below.
-                          properties:
-                            keyId:
-                              description: The value of the KeyId in lowercase hexidecimal.
-                              type: string
-                          type: object
+                          items:
+                            properties:
+                              keyId:
+                                description: The value of the KeyId in lowercase hexidecimal.
+                                type: string
+                            type: object
+                          type: array
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
