--- a/package/crds/storage.gcp.upbound.io_buckets.yaml
+++ b/package/crds/storage.gcp.upbound.io_buckets.yaml
@@ -360,16 +360,18 @@ spec:
                     description: The bucket's soft delete policy, which defines the
                       period of time that soft-deleted objects will be retained, and
                       cannot be permanently deleted. Structure is documented below.
-                    properties:
-                      retentionDurationSeconds:
-                        description: 'The duration in seconds that soft-deleted objects
-                          in the bucket will be retained and cannot be permanently
-                          deleted. Default value is 604800. The value must be in between
-                          604800(7 days) and 7776000(90 days). Note: To disable the
-                          soft delete policy on a bucket, This field must be set to
-                          0.'
-                        type: number
-                    type: object
+                    items:
+                      properties:
+                        retentionDurationSeconds:
+                          description: 'The duration in seconds that soft-deleted
+                            objects in the bucket will be retained and cannot be permanently
+                            deleted. Default value is 604800. The value must be in
+                            between 604800(7 days) and 7776000(90 days). Note: To
+                            disable the soft delete policy on a bucket, This field
+                            must be set to 0.'
+                          type: number
+                      type: object
+                    type: array
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
@@ -707,16 +709,18 @@ spec:
                     description: The bucket's soft delete policy, which defines the
                       period of time that soft-deleted objects will be retained, and
                       cannot be permanently deleted. Structure is documented below.
-                    properties:
-                      retentionDurationSeconds:
-                        description: 'The duration in seconds that soft-deleted objects
-                          in the bucket will be retained and cannot be permanently
-                          deleted. Default value is 604800. The value must be in between
-                          604800(7 days) and 7776000(90 days). Note: To disable the
-                          soft delete policy on a bucket, This field must be set to
-                          0.'
-                        type: number
-                    type: object
+                    items:
+                      properties:
+                        retentionDurationSeconds:
+                          description: 'The duration in seconds that soft-deleted
+                            objects in the bucket will be retained and cannot be permanently
+                            deleted. Default value is 604800. The value must be in
+                            between 604800(7 days) and 7776000(90 days). Note: To
+                            disable the soft delete policy on a bucket, This field
+                            must be set to 0.'
+                          type: number
+                      type: object
+                    type: array
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
@@ -1231,21 +1235,23 @@ spec:
                     description: The bucket's soft delete policy, which defines the
                       period of time that soft-deleted objects will be retained, and
                       cannot be permanently deleted. Structure is documented below.
-                    properties:
-                      effectiveTime:
-                        description: (Computed) Server-determined value that indicates
-                          the time from which the policy, or one with a greater retention,
-                          was effective. This value is in RFC 3339 format.
-                        type: string
-                      retentionDurationSeconds:
-                        description: 'The duration in seconds that soft-deleted objects
-                          in the bucket will be retained and cannot be permanently
-                          deleted. Default value is 604800. The value must be in between
-                          604800(7 days) and 7776000(90 days). Note: To disable the
-                          soft delete policy on a bucket, This field must be set to
-                          0.'
-                        type: number
-                    type: object
+                    items:
+                      properties:
+                        effectiveTime:
+                          description: (Computed) Server-determined value that indicates
+                            the time from which the policy, or one with a greater
+                            retention, was effective. This value is in RFC 3339 format.
+                          type: string
+                        retentionDurationSeconds:
+                          description: 'The duration in seconds that soft-deleted
+                            objects in the bucket will be retained and cannot be permanently
+                            deleted. Default value is 604800. The value must be in
+                            between 604800(7 days) and 7776000(90 days). Note: To
+                            disable the soft delete policy on a bucket, This field
+                            must be set to 0.'
+                          type: number
+                      type: object
+                    type: array
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
